# neural-chaos-lab-pro

./: .flake8  .gitignore  README.md  pyproject.toml  streamlit_app.py
.github/workflows/: ci.yml
neural_chaos_lab_pro/: cli.py  data.py  model.py  service.py  systems.py
neural_chaos_lab_pro.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_imports.py  test_service.py  test_systems.py
