[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neural-chaos-lab-pro"
version = "0.1.0"
description = "Hybrid physics/ML forecasting of chaotic systems with PyTorch and visualizations"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name="Lord Nibbler"}]
dependencies = [
  "numpy>=1.26.4",
  "pandas>=2.2.2",
  "torch>=2.3.0",
  "fastapi>=0.112.0",
  "uvicorn[standard]>=0.30.0",
  "typer>=0.12.3",
  "plotly>=5.22.0",
  "scikit-learn>=1.5.0",
  "torchdiffeq>=0.2.3"
]

[project.scripts]
chaoslab = "neural_chaos_lab_pro.cli:app"

[project.optional-dependencies]
test = ["coverage","fastapi","httpx","pytest"]